# jakebot-dashboard

./: .gitignore  Makefile  README.md  WEEK1_COMPLETION.md  pyproject.toml
backend/: __init__.py  auth.py  cli.py  config.py  main.py
backend/adapters/: __init__.py  healthkit_adapter.py  memory_adapter.py
backend/models/: __init__.py  health.py  memory.py
backend/routers/: __init__.py  health.py  memory.py  system.py
backend/static/: .gitkeep
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/panels/: HealthPanel.tsx  MemoryPanel.tsx
tests/: __init__.py  test_memory_api.py
